# templateTest_sed

./: .gitignore  LICENSE  README  README.md  configure.ac  reconf
src/: Makefile.am  genTemplateSource.sh  templateTest.c.template  templateTest.h  templateTest.h.template
test/: Makefile.am  templateTest.c
