AC_INIT([template],[1.0],[noone@nowhere.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall ])
AM_PROG_AR
LT_INIT
AC_PROG_CC
AC_C_INLINE
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/dummy.c])
AC_CONFIG_FILES([Makefile src/Makefile test/Makefile ])
AC_OUTPUT
